--- a/react/rbvite/tsconfig.json
+++ b/react/rbvite/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "types/*.d.ts", "types/dummy.ts"],
+  "include": ["src", "types/*.d.ts", "src/dummy.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
