session 정보를 localStorage에 보관. BrowserStorage, BrowserStorageMapper 인터페이스 및 클래스 사용

--- a/react/rbvite/tsconfig.json
+++ b/react/rbvite/tsconfig.json
@@ -19,6 +19,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
+
+    /**/
+    // "strictPropertyInitialization": false
   },
   "include": ["src", "types/*.d.ts", "src/dummy.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
